@@ -1,3 +1,8 @@
+2006-08-02  Tom Zanussi  <zanussi@us.ibm.com>
+
+	* stpd.c (main): Use modname rather than driver_pid in
+	stpd_filebase.
+
 2006-07-20  Martin Hunt  <hunt@redhat.com>
 
 	* librelay.c (stp_main_loop): If module doesn't start, kill any
